--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,15 +6,16 @@
 #    By: adben-mc <adben-mc@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/02 00:45:16 by adben-mc          #+#    #+#              #
-#    Updated: 2022/02/19 01:34:34 by adben-mc         ###   ########.fr        #
+#    Updated: 2022/02/19 18:36:42 by adben-mc         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS_DIR		=	srcs/
 
-SRCS			=	$(SRCS_DIR)main.c	\
+SRCS			=	$(SRCS_DIR)main.c		\
 					$(SRCS_DIR)ft_error.c	\
 					$(SRCS_DIR)ft_check.c	\
+					$(SRCS_DIR)ft_utils.c
 					
 
 OBJS			= 	${SRCS:.c=.o}
