--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: adben-mc <adben-mc@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/02 00:45:16 by adben-mc          #+#    #+#              #
-#    Updated: 2022/02/19 18:36:42 by adben-mc         ###   ########.fr        #
+#    Updated: 2022/02/27 18:34:52 by adben-mc         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,15 +17,14 @@ SRCS			=	$(SRCS_DIR)main.c		\
 					$(SRCS_DIR)ft_check.c	\
 					$(SRCS_DIR)ft_utils.c
 					
-
 OBJS			= 	${SRCS:.c=.o}
 
 NAME			= 	philo
 
 INC_DIR			=	./includes/.
-CC				=	gcc
+CC				=	gcc -I$(INC_DIR)
 RM				=	rm -f
-CFLAGS			=	-Wall -Wextra -Werror -I$(INC_DIR) #-g3 -fsanitize=address
+CFLAGS			=	-Wall -Wextra -Werror -pthread #-g3 -fsanitize=address
 
 all:		$(NAME)
 
