--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: adben-mc <adben-mc@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/02 00:45:16 by adben-mc          #+#    #+#              #
-#    Updated: 2022/02/27 18:34:52 by adben-mc         ###   ########.fr        #
+#    Updated: 2022/02/28 01:38:44 by adben-mc         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,9 @@ SRCS_DIR		=	srcs/
 SRCS			=	$(SRCS_DIR)main.c		\
 					$(SRCS_DIR)ft_error.c	\
 					$(SRCS_DIR)ft_check.c	\
-					$(SRCS_DIR)ft_utils.c
+					$(SRCS_DIR)ft_utils.c	\
+					$(SRCS_DIR)ft_routine.c	\
+					$(SRCS_DIR)ft_thread.c
 					
 OBJS			= 	${SRCS:.c=.o}
 
